--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 torch = "^2.4.0"
+gdown = "^5.2.0"
+torchvision = "^0.19.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
