--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ torch = "^2.4.0"
 gdown = "^5.2.0"
 torchvision = "^0.19.0"
 pydantic = "^2.8.2"
+click = "^8.1.7"
+pydantic-yaml = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
