--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ torchvision = "^0.19.0"
 pydantic = "^2.8.2"
 click = "^8.1.7"
 pydantic-yaml = "^1.3.0"
+tensorboard = "^2.17.1"
 
 
 [tool.poetry.group.dev.dependencies]
