--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^2.8.2"
 click = "^8.1.7"
 pydantic-yaml = "^1.3.0"
 tensorboard = "^2.17.1"
+matplotlib = "^3.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
